■DREM-3527 DAZN連携AI実装 ・バージョンチェック対応　（H4ｄアプリようにアプリ側でバージョン情報を持つ） ・日付表示変更　（終了日　非表示） ・カテゴリーID　（01→02　変更） ・GA対応 Change-Id: Ieee15f6b3252bccd1d3f0bba3bd2fbb2cfbfeb6e

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -509,6 +509,7 @@
     <string name="google_analytics_screen_name_content_detail_other_dtv">コンテンツ詳細_pure dTV</string>
     <string name="google_analytics_screen_name_content_detail_other_dtv_ch">コンテンツ詳細_pure dTVチャンネル</string>
     <string name="google_analytics_screen_name_content_detail_other_danime">コンテンツ詳細_pure dアニメストア</string>
+    <string name="google_analytics_screen_name_content_detail_other_dazn">コンテンツ詳細_pure DAZN</string>
     <string name="google_analytics_screen_name_recording_list">録画一覧</string>
     <string name="google_analytics_screen_name_recording_list_takeout">録画一覧_持ち出し</string>
     <string name="google_analytics_screen_name_recording_reservation">録画予約</string>
