--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="common_empty_data_message">コンテンツがありません</string>
     <string name="common_failed_data_message">データの取得に失敗しました</string>
     <string name="common_get_data_failed_message">取得に失敗しました</string>
+    <string name="common_failed_get_info">情報の取得に失敗しました</string>
     <string name="common_root_device_detection_message">Rootデバイスを検知したためアプリを終了します</string>
     <string name="common_until">まで</string>
     <string name="common_date_format_start_str">" から"</string>
