DREM-3332 地デジ・BSのコンテンツ詳細対応
Change-Id: I374e06a9ac81b4473b4e782b093f5010920596af

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -358,6 +358,7 @@
     <string name="contents_detail_hikari_channel_agreement">ご覧になるにはチャンネルの契約が必要です。\nドコモテレビターミナルで契約してください。</string>
     <string name="contents_detail_hikari_vod_agreement">本コンテンツ（有料）はテレビで視聴できます。\nコンテンツの契約状態はテレビでご確認ください。</string>
     <string name="contents_detail_no_agreement">視聴いただくには契約が必要です</string>
+    <string name="contents_detail_bs_premium_ch">本チャンネル（有料）はテレビで視聴できます。\nチャンネルの契約状態はテレビでご確認ください。</string>
     <string-array name="contents_detail_tab_vod">
         <item>@string/contents_detail_tab_contents_info</item>
     </string-array>
