--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -525,7 +525,7 @@
     <string name="google_analytics_screen_name_clip_key_word">クリップ_キーワード</string>
     <string name="google_analytics_screen_name_program_list_mine">番組表_マイ番組表</string>
     <string name="google_analytics_screen_name_program_list_h4d">番組表_ひかりTV</string>
-    <string name="google_analytics_screen_name_program_list_ttb_channel">番組表_地テジ</string>
+    <string name="google_analytics_screen_name_program_list_ttb_channel">番組表_地デジ</string>
     <string name="google_analytics_screen_name_program_list_bs_channel">番組表_BS</string>
     <string name="google_analytics_screen_name_program_list_dtv_channel">番組表_dTVチャンネル</string>
     <string name="google_analytics_screen_name_channel_detail">チャンネル詳細</string>
