DREM-4175 <AOS> 地デジ・BSの番組サムネイルの表示制御
Change-Id: Id1dbf951b5d105436e7bb876de0f479e26812f6d

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -503,6 +503,8 @@
     <string name="tutorial_show_agreement">規約を表示</string>
     <string name="tutorial_agreement_button">規約に同意して利用を開始</string>
 
+    <item type="id" name="tag_key"> </item>
+
     <!-- Google Analytics スクリーン名 -->
     <string name="google_analytics_screen_name_splash">スプラッシュ</string>
     <string name="google_analytics_screen_name_home">ホーム</string>
