DREM-5010 <AOS> ペアリング導線の改善(既存画面変更)★
Change-Id: I745e1dad101f8e28a36df2d00e924c3dbcbefb31

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -73,24 +73,31 @@
     <string name="str_app_title">ドコモテレビターミナル</string>
     <string name="str_launch_title">起動画面</string>
     <string name="str_stb_next_not_display_text">以後、表示しない</string>
-    <string name="str_stb_connect_success_text">ドコモテレビターミナルとペアリングしました</string>
+    <string name="str_stb_connect_success_text">ドコモテレビターミナルと接続しました。</string>
     <string name="str_stb_no_pair_use_text">ペアリングをしないで利用する</string>
+    <string name="str_stb_to_set_later_text">あとで設定する</string>
     <string name="str_stb_no_login_use_text">ログインしないで利用する</string>
     <string name="str_stb_paring_cancel_text">ペアリングを解除する</string>
     <string name="str_stb_paring_setting_title">ペアリング設定</string>
     <string name="str_d_account_setting_help_title">ドコテレ画像</string>
-    <string name="str_d_account_app_not_install">ドコモテレビターミナルとペアリングするには\ndアカウントでのログインが必要です</string>
+    <string name="str_d_account_app_not_install">dアカウント設定アプリがインストールされておりません。\n本アプリのご利用には、dアカウント設定アプリが必要です。</string>
     <string name="str_d_account_app_download">dアカウント設定アプリをダウンロードする</string>
-    <string name="str_stb_select_result_text">ペアリング可能なドコモテレビターミナルが\n見つかりました</string>
-    <string name="str_stb_select_result_text_failed">ペアリング可能なドコモテレビターミナルが\n見つかりませんでした</string>
-    <string name="str_stb_select_result_text_search">ペアリング可能なドコモテレビターミナルを\n探しています</string>
-    <string name="str_stb_not_registration_account_message">ドコモテレビターミナルに\nログイン中のdアカウントが登録されていません</string>
-    <string name="str_stb_login_other_account">別のdアカウントでログインする</string>
-    <string name="str_stb_d_account_registration_help">ドコモテレビターミナルに\ndアカウントを登録するには</string>
+    <string name="str_stb_select_result_text">接続可能なドコモテレビターミナルが見つかりました。\n接続したいドコモテレビターミナルを選択してください。</string>
+    <string name="str_stb_select_result_text_failed">接続可能なドコモテレビターミナルが見つかりませんでした。</string>
+    <string name="str_stb_select_power_and_wifi_check">ドコモテレビターミナルの電源がONになっていることを確認の上、本スマートフォン・タブレットを同じネットワークにWi-Fi接続してください。</string>
+    <string name="str_stb_select_result_text_search">接続可能なドコモテレビターミナルを探しています。</string>
+    <string name="str_stb_not_registration_account_message">本スマートフォン・タブレットとドコモテレビターミナルのdアカウントが一致しません。\n同一のdアカウントを本スマートフォン・タブレットとドコモテレビターミナルに設定してください。</string>
+    <string name="str_stb_login_other_account">本スマートフォン・タブレットの\ndアカウントを変更する</string>
+    <string name="str_stb_d_account_registration_help">ドコモテレビターミナルに\ndアカウントを設定する</string>
     <string name="str_stb_input_activation_code">ペアリングコードを入力する</string>
-    <string name="str_stb_again_pairing">再度ペアリングを行う</string>
+    <string name="str_stb_again_pairing">再度、ドコモテレビターミナルとつなげる</string>
+    <string name="launch_initial_setting_door_string">ドコモテレビターミナルと連携したテレビ操作などの機能を利用するには接続設定(ペアリング)\nを行う必要があります。</string>
+    <string name="launch_initial_setting_door_paring_string">接続設定を行う</string>
+    <string name="launch_stb_select_latency_text">30秒ほどかかる場合があります。</string>
+    <string name="str_stb_select_network_set_help">ネットワーク設定のヘルプ</string>
+    <string name="str_stb_select_wifi_not_connect">本スマートフォン・タブレットWi-Fiに接続されていません。\nWi-Fiに接続後に再度お試しください。</string>
 
-    <string name="str_stb_pairing">ドコモテレビターミナルとペアリング中です</string>
+    <string name="str_stb_pairing">ドコモテレビターミナルと接続中です。</string>
     <string name="str_launch_stb_communication_failed_error">ドコモテレビターミナルとの通信に失敗しました（A-10）</string>
     <string name="str_stb_registration_device_name_os">Android</string>
     <string name="str_stb_registration_device_name_regist">登録</string>
@@ -138,9 +145,9 @@
     <string name="activity_start_network_error_message">ネットワークに接続できませんでした。\nネットワーク状態を確認してください。</string>
     <string name="get_user_info_error_message">ひかりＴＶ for docomoの契約情報取得に失敗しました</string>
     <string name="get_contents_data_error_message">情報の取得に失敗したため、一部のコンテンツのみ表示します。\nしばらく経ってから再度お試しください。</string>
-    <string name="home_no_contract_info_text">ご利用中のdアカウントでひかりＴＶ for docomoの契約がありません</string>
+    <string name="home_no_paring_info_text">ドコモテレビターミナルとの接続設定が完了していません。</string>
     <string name="home_no_login_info_text">dアカウントでログインしてください</string>
-    <string name="home_contract_button_text">契約する</string>
+    <string name="home_contract_button_text">接続する</string>
     <string name="home_contents_pipe">" | "</string>
     <string name="home_contents_hyphen">" - "</string>
     <string name="home_contents_colon">:</string>
@@ -432,6 +439,9 @@
     <string name="main_setting_menu_title_faq_list">FAQ</string>
     <string name="main_setting_remote_confirm_message_setting">外出先でも視聴できるリモート視聴設定を有効にしますか？\n\n有効にする場合は、「OK」を押下する前に、テレビでひかりＴＶ for docomoを起動し、「設定・お知らせ＞ホームサーバ設定＞ホームサーバ機能設定」で「自宅内/外出先で有効」を選択してください。</string>
     <string name="main_setting_remote_confirm_message_first_start">外出先でも視聴できるリモート視聴設定を有効にしますか？\n\n有効にする場合は、「OK」を押下する前に、テレビでひかりＴＶ for docomoを起動し、「設定・お知らせ＞ホームサーバ設定＞ホームサーバ機能設定」で「自宅内/外出先で有効」を選択してください。\n\nあとから設定する場合は、「設定＞FAQ」をご確認ください。</string>
+    <string name="main_setting_paring_release_dialog_confirm_text">本アプリからのテレビ操作、ひかりＴＶ for docomoの放送番組の視聴や録画予約などの機能を利用できなくなります。</string>
+    <string name="main_setting_paring_release_text">解除する</string>
+    <string name="main_setting_paring_release_cancel_text">キャンセル</string>
     <string name="main_setting_menu_title_license">ライセンス情報</string>
     <string name="main_setting_menu_title_privacy_policy">プライバシーポリシー</string>
     <string name="main_setting_menu_title_app">アプリケーション・プライバシーポリシー</string>
