DREM-4739 <AOS> ペアリング導線の改善(新規画面追加)★ DREM-5010 <AOS> ペアリング導線の改善(既存画面変更)★
Change-Id: Ib6d06cde51d15c5541a9757d3f56f814b6fa2763

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="common_date_format_end_str">" まで"</string>
     <string name="common_text_regist_progress_done">設定を完了しました</string>
     <string name="common_text_regist_over_error_setting">リモート視聴可能な台数が上限に達しました。\nドコモテレビターミナルでペアリングを解除してください。\n解除方法はFAQをご覧ください。</string>
-    <string name="common_text_regist_other_error">リモート視聴設定に失敗しました</string>
+    <string name="common_text_regist_other_error">ひかりＴＶ for docomoの設定が「自宅内/外出先で有効」になっていない可能性があります。設定をご確認ください。</string>
     <string name="common_start_dtv_application_uninstall_error">ドコモテレビターミナルにdTVアプリがインストールされていないため、起動に失敗しました</string>
     <string name="common_start_d_animation_application_uninstall_error">ドコモテレビターミナルにdアニメストアアプリがインストールされていないため、起動に失敗しました</string>
     <string name="common_start_dtv_channel__application_uninstall_error">ドコモテレビターミナルにdTVチャンネルアプリがインストールされていないため、起動に失敗しました</string>
@@ -95,7 +95,7 @@
     <string name="launch_initial_setting_door_paring_string">接続設定を行う</string>
     <string name="launch_stb_select_latency_text">30秒ほどかかる場合があります。</string>
     <string name="str_stb_select_network_set_help">ネットワーク設定のヘルプ</string>
-    <string name="str_stb_select_wifi_not_connect">本スマートフォン・タブレットWi-Fiに接続されていません。\nWi-Fiに接続後に再度お試しください。</string>
+    <string name="str_stb_select_wifi_not_connect">本スマートフォン・タブレットがWi-Fiに接続されていません。\nWi-Fiに接続後に再度お試しください。</string>
 
     <string name="str_stb_pairing">ドコモテレビターミナルと接続中です。</string>
     <string name="str_launch_stb_communication_failed_error">ドコモテレビターミナルとの通信に失敗しました（A-10）</string>
@@ -437,8 +437,6 @@
     <string name="main_setting_h4d_not_signed_message">ひかりＴＶ for docomoの契約状態が確認できないため\nご利用になれません</string>
     <string name="main_setting_stb_not_connected_message">ドコモテレビターミナルが接続されているWi-Fiに接続した状態で再度実施してください</string>
     <string name="main_setting_menu_title_faq_list">FAQ</string>
-    <string name="main_setting_remote_confirm_message_setting">外出先でも視聴できるリモート視聴設定を有効にしますか？\n\n有効にする場合は、「OK」を押下する前に、テレビでひかりＴＶ for docomoを起動し、「設定・お知らせ＞ホームサーバ設定＞ホームサーバ機能設定」で「自宅内/外出先で有効」を選択してください。</string>
-    <string name="main_setting_remote_confirm_message_first_start">外出先でも視聴できるリモート視聴設定を有効にしますか？\n\n有効にする場合は、「OK」を押下する前に、テレビでひかりＴＶ for docomoを起動し、「設定・お知らせ＞ホームサーバ設定＞ホームサーバ機能設定」で「自宅内/外出先で有効」を選択してください。\n\nあとから設定する場合は、「設定＞FAQ」をご確認ください。</string>
     <string name="main_setting_paring_release_dialog_confirm_text">本アプリからのテレビ操作、ひかりＴＶ for docomoの放送番組の視聴や録画予約などの機能を利用できなくなります。</string>
     <string name="main_setting_paring_release_text">解除する</string>
     <string name="main_setting_paring_release_cancel_text">キャンセル</string>
@@ -666,11 +664,10 @@
 
     <!-- STB初期設定扉 -->
     <string name="launch_stb_tv_title">ドコモテレビターミナルと連携したテレビ操作などの機能を利用するには接続設定（ペアリング）を行う必要があります。</string>
-    <string name="launch_stb_tv_comment">以下を確認の上、設定を開始してください。\n・ドコモテレビターミナルと同じネットワークにWi-Fi接続されている。\n・ドコモテレビターミナルに本スマートフォン・タブレットと同じdアカウントが登録されている。</string>
+    <string name="launch_stb_tv_comment">以下をご確認の上、設定を開始してください。\n・ドコモテレビターミナルと同じネットワークにWi-Fi接続されている。\n・ドコモテレビターミナルに本スマートフォン・タブレットと同じdアカウントが登録されている。</string>
     <string name="launch_stb_bt_txt">接続設定（ペアリング）を行う</string>
     <string name="launch_stb_bottom_txt">接続しないで利用する</string>
-    <string name="launch_stb_select_dialog_title">本アプリからのテレビ操作、ひかりＴＶ for docomoの放送番組の視聴や録画予約などの機能を利用するにはドコモテレビターミナルとの接続設定（ペアリング）を行ってください。\n
-あとで設定する場合は、ホーム画面上部の「接続設定」および「設定＞ペアリング設定」から行えます。</string>
+    <string name="launch_stb_select_dialog_title">本アプリからのテレビ操作、ひかりＴＶ for docomoの放送番組の視聴や録画予約などの機能を利用するにはドコモテレビターミナルとの接続設定（ペアリング）を行ってください。\nあとで設定する場合は、ホーム画面上部の「接続設定」および「設定＞ペアリング設定」から行えます。</string>
     <string name="launch_stb_select_dialog_txt1">あとで設定する</string>
     <string name="launch_stb_select_dialog_txt2">次回以降ペアリング設定を表示しない</string>
     <string name="launch_stb_select_dialog_txt3">キャンセル</string>
@@ -692,19 +689,19 @@
     <string name="stb_wifi_set_wifi_off_txt">Wi-Fi未接続</string>
     <string name="stb_wifi_set_wifi_state_hyphen_txt">" - "</string>
 
-    <!-- リモート視聴設定 -->
+    <!-- リモート視聴確認 -->
     <string name="remote_set_title">ひかりＴＶ for docomoをご利用の方で、外出先で放送番組を視聴するには設定が必要です。</string>
     <string name="remote_set_bt_txt">設定をする</string>
     <string name="remote_set_bottom_txt">今は利用しない</string>
 
-    <!-- リモート視聴設定確認 -->
+    <!-- リモート視聴設定 -->
     <string name="remote_introduce_header">リモート視聴設定</string>
-    <string name="remote_introduce_title">ドコモテレビターミナルのひかりＴＶ for docomoアプリを起動して、以下の設定を行なってください。</string>
+    <string name="remote_introduce_title">ドコモテレビターミナルのひかりＴＶ for docomoアプリを起動して、以下の設定を行ってください。</string>
     <string name="remote_introduce_comment">※本スマートフォン・タブレットのユーザー（dアカウント）で起動してください。</string>
-    <string name="remote_introduce_header_title1">1.「設定・お知らせ」で「ホームサーバ設定」を選択</string>
-    <string name="remote_introduce_header_title2">2.「ホームサーバ設定」で「ホームサーバ機能設定」を選択</string>
-    <string name="remote_introduce_header_title3">3.「ホームサーバ機能設定」で「自宅内/外出先で有効」を選択</string>
+    <string name="remote_introduce_header_title1">１．「設定・お知らせ」で「ホームサーバ設定」を選択</string>
+    <string name="remote_introduce_header_title2">２．「ホームサーバ設定」で「ホームサーバ機能設定」を選択</string>
+    <string name="remote_introduce_header_title3">３．「ホームサーバ機能設定」で「自宅内/外出先で有効」を選択</string>
     <string name="remote_introduce_bt_txt">設定を行った</string>
     <string name="remote_introduce_bottom_txt">あとで設定する</string>
-    <string name="remote_introduce_dialog_txt">あとから設定する場合は「設定＞リモート視聴設定」より行なってください</string>
+    <string name="remote_introduce_dialog_txt">あとで設定する場合は、「設定＞リモート視聴設定」より行ってください。</string>
 </resources>
